WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146053
[GTK] WEBKIT_CACHE_MODEL_DOCUMENT_VIEWER doesn't disable memory cache when set before the web process is launched
https://bugs.webkit.org/show_bug.cgi?id=146053
Summary
[GTK] WEBKIT_CACHE_MODEL_DOCUMENT_VIEWER doesn't disable memory cache when se...
Carlos Garcia Campos
Reported
2015-06-17 02:30:03 PDT
The cache is disabled in WebProcess::platformSetCacheModel() when the cache model is CacheModelDocumentViewer, but it's enabled again by WebProcess::setMemoryCacheDisabled() when memoryCacheDisabled creation parameter is processed. We need to make sure the cache model and memoryCacheDisabled parameters are consistent.
Attachments
Patch
(1.90 KB, patch)
2015-06-17 02:34 PDT
,
Carlos Garcia Campos
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2015-06-17 02:34:34 PDT
Created
attachment 255008
[details]
Patch Unfortunately we don't have a way to check that memory cache is actually disabled in a unit test. Maybe if we eventually implement the WebsiteDataStore, we can get the origins, but for now, it doesn't seem to be possible.
Carlos Garcia Campos
Comment 2
2015-06-17 08:33:26 PDT
Committed
r185651
: <
http://trac.webkit.org/changeset/185651
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug