Source/WebKit2/UIProcess/gtk/WebProcessPoolGtk.cpp
@@ -108,6 +108,8 @@ void WebProcessPool::platformInitializeWebProcess(WebProcessCreationParameters& 
         parameters.ignoreTLSErrors = m_ignoreTLSErrors;
         parameters.diskCacheDirectory = m_configuration->diskCacheDirectory();
     }
+
+    parameters.memoryCacheDisabled = m_memoryCacheDisabled || m_cacheModel == CacheModelDocumentViewer;
 }
 
 void WebProcessPool::platformInvalidateContext()
